# amgd_optimizer

./: README.md  Setup.py  desktop  desktop.pub  pyproject.toml  requirements.txt  setup.cfg
.ipynb_checkpoints/: Setup-checkpoint.py  __init__-checkpoint.py
